--- a/app/static/css/pages/agenda/agenda-base.css
+++ b/app/static/css/pages/agenda/agenda-base.css
@@ -52,7 +52,7 @@
 	font-weight: 400;
 	font-style: italic;
 	color: #555;
-	margin: -20px 40px 20px;
+	margin: 0 40px 20px;
 	line-height: 1.3;
 }
 
@@ -283,7 +283,7 @@
 .action-bar {
 	display: flex;
 	justify-content: space-between;
-	align-items: center;
+	align-items: flex-end;
 	margin: 20px auto;
 	max-width: 100%;
 }
