fix display issues

--- a/app/static/css/pages/agenda/agenda-view-owners.css
+++ b/app/static/css/pages/agenda/agenda-view-owners.css
@@ -197,3 +197,9 @@
     padding: 0 15px !important;
     box-sizing: border-box !important;
 }
+
+/* Autocomplete Dropup */
+.autocomplete-items {
+    top: auto !important;
+    bottom: 100% !important;
+}
