--- a/app/templates/_contact_modal.html
+++ b/app/templates/_contact_modal.html
@@ -68,6 +68,10 @@
                 </select>
                 </td>
             </tr>
+            <tr>
+              <td><label for="dtm">DTM:</label></td>
+              <td><input type="checkbox" id="dtm" name="dtm" /></td>
+            </tr>
         </table>
       </div>
 
@@ -81,10 +85,6 @@
                 <td>
                 <input type="text" id="completed_paths" name="completed_paths" readonly placeholder="Derived from Achievements" />
                 </td>
-            </tr>
-            <tr>
-                <td><label for="dtm">DTM:</label></td>
-                <td><input type="checkbox" id="dtm" name="dtm" disabled /></td>
             </tr>
             <tr>
                 <td><label for="current_path">Current Path:</label></td>
