--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -7,7 +7,7 @@
   <title>Login</title>
   <link rel="preconnect" href="https://fonts.loli.net">
   <link rel="preconnect" href="https://gstatic.loli.net" crossorigin>
-  <link href="https://fonts.loli.net/css2?family=Inter:wght@400;500;600&family=Montserrat:wght@500;600&display=swap"
+  <link href="https://fonts.loli.net/css2?family=Inter:wght@400;500;600&family=Montserrat:wght@500;600&family=Great+Vibes&display=swap"
     rel="stylesheet">
   {% assets "css_all" %}
   <link rel="stylesheet" href="{{ ASSET_URL }}">
@@ -19,7 +19,7 @@
   <div class="login-container">
     <img src="{{ url_for('static', filename='images/SHLTMC-logo.webp') }}" alt="SHLTMC Logo"
       class="login-logo" />
-    <h1>Meeting Manager</h1>
+    <h1>Memory Maker</h1>
     {% with messages = get_flashed_messages(with_categories=true) %} {% if
     messages %}
     <div class="alert-container">
