support markdown grammar in textareas using marked.js and dompurify.js

--- a/app/static/css/components/meeting_filter.css
+++ b/app/static/css/components/meeting_filter.css
@@ -222,6 +222,9 @@
 /* --- Generic Custom Select Styles --- */
 .custom-select-wrapper {
 	width: 100%;
+	display: flex;
+	flex-direction: column;
+	gap: 5px;
 }
 
 .custom-select-wrapper label {
